--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Rendering GPX tracks with OpenLayers",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "mocha tests/screenshot.test.js --timeout 10000"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,9 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.3",
     "ol": "^9.2.4"
+  },
+  "devDependencies": {
+    "mocha": "^10.4.0",
+    "puppeteer": "^22.10.0"
   }
 }
